[gd_scene load_steps=5 format=3 uid="uid://cvlu7lsv2802r"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_8c648"]
[ext_resource type="Script" path="res://Scripts/rigid_body_2dtest.gd" id="2_ddm8w"]
[ext_resource type="Texture2D" uid="uid://bcvg07sc80vv" path="res://Resources/Tiles/TilePictures/GrassyTile.png" id="3_ip7vo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8webb"]
radius = 150.0

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_8c648")

[node name="Label" type="Label" parent="."]
offset_left = 839.0
offset_top = 188.0
offset_right = 1126.0
offset_bottom = 325.0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 100
text = "GAME"

[node name="StartBtn" type="Button" parent="."]
offset_left = 120.0
offset_top = 526.0
offset_right = 455.0
offset_bottom = 617.0
theme_override_font_sizes/font_size = 60
text = "Start Game"

[node name="QuickStartBtn" type="Button" parent="."]
offset_left = 120.0
offset_top = 674.0
offset_right = 878.0
offset_bottom = 765.0
theme_override_font_sizes/font_size = 60
text = "Quick Start Game (Debug)"

[node name="QuitBtn" type="Button" parent="."]
offset_left = 120.0
offset_top = 829.0
offset_right = 440.0
offset_bottom = 920.0
theme_override_font_sizes/font_size = 60
text = "Quit Game"

[node name="RigidBody2D" type="RigidBody2D" parent="."]
z_index = -10
position = Vector2(1485, 519)
gravity_scale = 0.0
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("2_ddm8w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("CircleShape2D_8webb")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
texture_filter = 1
scale = Vector2(25, 25)
texture = ExtResource("3_ip7vo")

[node name="RigidBody2D2" type="RigidBody2D" parent="."]
z_index = -10
position = Vector2(497, 259)
gravity_scale = 0.0
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("2_ddm8w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
shape = SubResource("CircleShape2D_8webb")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D2"]
texture_filter = 1
scale = Vector2(25, 25)
texture = ExtResource("3_ip7vo")

[node name="RigidBody2D3" type="RigidBody2D" parent="."]
z_index = -10
position = Vector2(704, 1049)
gravity_scale = 0.0
linear_damp = 1.0
angular_damp = 1.0
script = ExtResource("2_ddm8w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D3"]
shape = SubResource("CircleShape2D_8webb")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D3"]
texture_filter = 1
scale = Vector2(25, 25)
texture = ExtResource("3_ip7vo")

[connection signal="pressed" from="StartBtn" to="." method="startGame"]
[connection signal="pressed" from="QuickStartBtn" to="." method="quickStartGame"]
[connection signal="pressed" from="QuitBtn" to="." method="quitGame"]
